--- a/Portfolio.html
+++ b/Portfolio.html
@@ -324,7 +324,7 @@
         <section class="firstSection">
             <div class="leftSection">
                 Hi,My name is <span class="purple">Arham</span>
-                <div>and I am a passionate </div>
+                <div>and I am a passionate CS student </div>
 
                 <span id="element"></span>
             </div>
